--- a/example/index.html
+++ b/example/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Роутинг</title>
+    <title>Client-routing-lib</title>
   </head>
   <body>
     <header>
       <h1>Client routing example</h1>
       <p id="message">
-        You can see the work of the hooks BeforeEnter, onEnter, onLeave in the
+        You can see the work of the hooks onBeforeEnter, onEnter, onLeave in the
         console.
       </p>
       <p data-name="terms" data-id="hash" style="color: blue; cursor: pointer">
@@ -31,6 +31,6 @@
         <a href="/login">Login</a>
       </nav>
     </header>
-    <article id="root" style="display: none"></article>
+    <main id="root" style="display: none"></main>
   </body>
 </html>
